fix animation mobile

--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -14,8 +14,8 @@
   text-align: center;
   background-color: #f5f5f5;
   position: relative;
-  height: 100vh;
   margin-top: 140px;
+  min-height: 100vh;
 }
 
 main {
